MetaItemModel: Fix Qt assertion in adding rows

Summary:
We need the row count to be correct, and since flat models sometimes have no rows, places.count is not a valid row

BUG: 399753

Differential Revision: https://phabricator.kde.org/D16213